==> lhj2750200891/Git/工创赛_FreeRTOS_模糊PID_10.6/Drivers/BSP/OLED/oled.c <==
 #include "inv_mpu.h"
#include "inv_mpu_dmp_motion_driver.h"
#include "mpu6050.h"
#include "oled.h"
#include "stdlib.h"
#include "./SYSTEM/usart/usart.h"
#include "stm32f4xx_hal.h"
#include "control.h"
#include "adc.h"

void OLED_WR_Byte(uint8_t dat,uint8_t cmd)
{
    uint8_t i;
    if(cmd)
        HAL_GPIO_WritePin(DC_GPIO_Port,DC_Pin,GPIO_PIN_SET);
    else
        HAL_GPIO_WritePin(DC_GPIO_Port,DC_Pin,GPIO_PIN_RESET);
    for(i=0; i<8; i++)
    {
        HAL_GPIO_WritePin(SCLK_GPIO_Port,SCLK_Pin,GPIO_PIN_RESET);
        if(dat&0x80)
            HAL_GPIO_WritePin(SDIN_GPIO_Port,SDIN_Pin,GPIO_PIN_SET);
        else
            HAL_GPIO_WritePin(SDIN_GPIO_Port,SDIN_Pin,GPIO_PIN_RESET);
        HAL_GPIO_WritePin(SCLK_GPIO_Port,SCLK_Pin,GPIO_PIN_SET);
        dat<<=1;
    }
    HAL_GPIO_WritePin(DC_GPIO_Port,DC_Pin,GPIO_PIN_SET);
}

void OLED_ShowChar(uint8_t x,uint8_t y,uint8_t chr,uint8_t size,uint8_t mode)
{
    uint8_t temp,t,t1;
    uint8_t y0=y;
    chr=chr-' ';//得到偏移后的值
    for(t=0; t<size; t++)
    {
        if(size==12)temp=oled_asc2_1206[chr][t];  //调用1206字体
        else temp=oled_asc2_1608[chr][t];		 //调用1608字体
        for(t1=0; t1<8; t1++)
        {
            if(temp&0x80)OLED_DrawPoint(x,y,mode);
            else OLED_DrawPoint(x,y,!mode);
            temp<<=1;
            y++;
            if((y-y0)==size)
            {
                y=y0;
                x++;
                break;
            }
        }
    }
}

void OLED_Init(void)
{

//    RCC->APB2ENR|=1<<3;
//    GPIOG->MODER&=0XFF000FFF;
//    GPIOG->MODER|=0X00222000;

//    RCC->APB2ENR|=1<<2;
//    GPIOA->MODER&=0X0FFFFFFF;
//    GPIOA->MODER|=0X20000000;

	GPIO_InitTypeDef  GPIO_InitStructure;
    
		OLED_CLK_GPIO_CLK_ENABLE();
	  OLED_CS_GPIO_CLK_ENABLE();
	  OLED_RST_GPIO_CLK_ENABLE();
		OLED_DC_GPIO_CLK_ENABLE();
	
//    gpio_init_struct.Pin = DC_Pin | RST_Pin | SDIN_Pin | SCLK_Pin;   /* 引脚 */
//    gpio_init_struct.Mode = GPIO_MODE_OUTPUT_PP;            /* 推挽输出 */
//    gpio_init_struct.Pull = GPIO_PuPd_NOPULL;                    /* 上拉 */
//    gpio_init_struct.Speed = GPIO_SPEED_FREQ_HIGH;          /* 高速 */
//    HAL_GPIO_Init(GPIOG, &gpio_init_struct);       /* 初始化LED0引脚 */
	
 
	GPIO_InitStructure.Pin = DC_Pin | RST_Pin | SCLK_Pin | SDIN_Pin;
 	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Pull=GPIO_PULLUP;		//SPI空闲时高电平，上升沿采集
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;		
 	HAL_GPIO_Init(GPIOG, &GPIO_InitStructure);
 				
//	GPIO_InitStructure.Pin = RST_Pin;		
// 	HAL_GPIO_Init(RST_GPIO_Port, &GPIO_InitStructure);	
//						
//	GPIO_InitStructure.Pin = SCLK_Pin;
// 	HAL_GPIO_Init(SCLK_GPIO_Port, &GPIO_InitStructure);
//						
// 
//  GPIO_InitStructure.Pin = SDIN_Pin;		
// 	HAL_GPIO_Init(SDIN_GPIO_Port, &GPIO_InitStructure);



    HAL_GPIO_WritePin(RST_GPIO_Port,RST_Pin,GPIO_PIN_RESET);
    HAL_Delay(100);
    HAL_GPIO_WritePin(RST_GPIO_Port,RST_Pin,GPIO_PIN_SET);

    OLED_WR_Byte(0xAE,OLED_CMD); //关闭显示
    OLED_WR_Byte(0xD5,OLED_CMD); //设置时钟分频因子,震荡频率
    OLED_WR_Byte(80,OLED_CMD);   //[3:0],分频因子;[7:4],震荡频率
    OLED_WR_Byte(0xA8,OLED_CMD); //设置驱动路数
    OLED_WR_Byte(0X3F,OLED_CMD); //默认0X3F(1/64)
    OLED_WR_Byte(0xD3,OLED_CMD); //设置显示偏移
    OLED_WR_Byte(0X00,OLED_CMD); //默认为0

    OLED_WR_Byte(0x40,OLED_CMD); //设置显示开始行 [5:0],行数.

    OLED_WR_Byte(0x8D,OLED_CMD); //电荷泵设置
    OLED_WR_Byte(0x14,OLED_CMD); //bit2，开启/关闭
    OLED_WR_Byte(0x20,OLED_CMD); //设置内存地址模式
    OLED_WR_Byte(0x02,OLED_CMD); //[1:0],00，列地址模式;01，行地址模式;10,页地址模式;默认10;
    OLED_WR_Byte(0xA1,OLED_CMD); //段重定义设置,bit0:0,0->0;1,0->127;
    OLED_WR_Byte(0xC0,OLED_CMD); //设置COM扫描方向;bit3:0,普通模式;1,重定义模式 COM[N-1]->COM0;N:驱动路数
    OLED_WR_Byte(0xDA,OLED_CMD); //设置COM硬件引脚配置
    OLED_WR_Byte(0x12,OLED_CMD); //[5:4]配置

    OLED_WR_Byte(0x81,OLED_CMD); //对比度设置
    OLED_WR_Byte(0xEF,OLED_CMD); //1~255;默认0X7F (亮度设置,越大越亮)
    OLED_WR_Byte(0xD9,OLED_CMD); //设置预充电周期
    OLED_WR_Byte(0xf1,OLED_CMD); //[3:0],PHASE 1;[7:4],PHASE 2;
    OLED_WR_Byte(0xDB,OLED_CMD); //设置VCOMH 电压倍率
    OLED_WR_Byte(0x30,OLED_CMD); //[6:4] 000,0.65*vcc;001,0.77*vcc;011,0.83*vcc;

    OLED_WR_Byte(0xA4,OLED_CMD); //全局显示开启;bit0:1,开启;0,关闭;(白屏/黑屏)
    OLED_WR_Byte(0xA6,OLED_CMD); //设置显示方式;bit0:1,反相显示;0,正常显示
    OLED_WR_Byte(0xAF,OLED_CMD); //开启显示
    OLED_Clear();
}
