==> luliangliangbeifeng/smart-home/code/RVSTAR code/slave/oled.c <==
#include <gd32vf103v_rvstar.h>
#define OLED_CMD  0
#define OLED_DATA 1

void OLED_init(void)
{
    /* configure GPIO */
    gpio_config();   
    /* configure SPI */
    SPI_config();
    /* put reset low */
    gpio_bit_reset(GPIOB, GPIO_PIN_9);
    delay_1ms(100);
    /* put reset high */
    gpio_bit_set(GPIOB, GPIO_PIN_9);

    OLED_WR_Byte(0xAE,OLED_CMD); /* display off */ 
    OLED_WR_Byte(0xD5,OLED_CMD); /* set the clock frequency division factor and oscillation frequency */
    OLED_WR_Byte(80,OLED_CMD);   /* clock frequency division factor:[3:0], oscillation frequency:[4:0] */
    OLED_WR_Byte(0xA8,OLED_CMD); /* set the drive number */
    OLED_WR_Byte(0X3F,OLED_CMD); /* default: 0x3f */
    OLED_WR_Byte(0xD3,OLED_CMD); /* default: 0x3f */
    OLED_WR_Byte(0X00,OLED_CMD); /* set display offset */

    OLED_WR_Byte(0x40,OLED_CMD); /* set the display start line, [5:0] */
													    
    OLED_WR_Byte(0x8D,OLED_CMD); /* set charge pump */
    OLED_WR_Byte(0x14,OLED_CMD); /* bit2, on/off */
    OLED_WR_Byte(0x20,OLED_CMD); /* set the memory address mode */
    OLED_WR_Byte(0x02,OLED_CMD); /* [1:0],00 ,column address mode; 01, row address mode; 10, page address mode; default 10*/
    OLED_WR_Byte(0xA1,OLED_CMD); /* set section redefine,bit0:0,0->0;1,0->127 */
    OLED_WR_Byte(0xC0,OLED_CMD); /* set the COM scan direction;bit3:0,normal mode; redeifne mode COM[N-1]->COM0;N: drive number*/
    OLED_WR_Byte(0xDA,OLED_CMD); /* set the COM hardware pin configuration*/
    OLED_WR_Byte(0x12,OLED_CMD); /* configure [5:4]*/
		 
    OLED_WR_Byte(0x81,OLED_CMD); /* set contrast */
    OLED_WR_Byte(0xEF,OLED_CMD); /* 1-255,default:0x7F(brightness setting, the bigger, the brighter*/
    OLED_WR_Byte(0xD9,OLED_CMD); /* set the pre-charge cycle */
    OLED_WR_Byte(0xf1,OLED_CMD); /* [3:0],PHASE 1;[7:4],PHASE 2; */
    OLED_WR_Byte(0xDB,OLED_CMD); /* set VCOMH voltage multiplier */
    OLED_WR_Byte(0x30,OLED_CMD); /* [6:4] 000,0.65*vcc;001,0.77*vcc;011,0.83*vcc; */

    OLED_WR_Byte(0xA4,OLED_CMD); /* set global display; bit0:1,on;0,off(white/black screen)*/
    OLED_WR_Byte(0xA6,OLED_CMD); /* set the display mode; bit0:1,reverse display ; 0, normal display*/						   
    OLED_WR_Byte(0xAF,OLED_CMD); /* display on */
    OLED_Clear();
}

void OLED_WR_Byte(uint8_t dat,uint8_t cmd)
{
    /* DC/cmd:  1 means data,0 means command */
    if( cmd ) {
        gpio_bit_set(GPIOB, GPIO_PIN_8);
    } else { 
        gpio_bit_reset(GPIOB, GPIO_PIN_8);
    }
    /* wait until the transmit data buffer is empty */
    while(RESET == spi_i2s_flag_get(SPI0, SPI_FLAG_TBE));
    /* SPI transmit data */
    spi_i2s_data_transmit(SPI0, dat);

    delay_us(10);
    /* DC = 1 */
    gpio_bit_set(GPIOB, GPIO_PIN_8);
}

void OLED_ShowChar(uint8_t x, uint8_t y, uint8_t chr, uint8_t size, uint8_t mode)
{      			    
    uint8_t temp, t, t1;
    uint8_t y0 = y;
    uint8_t csize = ( size / 8 + ( ( size % 8 ) ? 1 : 0) ) *  ( size / 2);
    chr = chr-' ';	 
    for(t = 0;t < csize;t++) {
	if(size == 12) temp = asc2_1206[chr][t];
	else if(size == 16) temp = asc2_1608[chr][t];
	else if(size == 24) temp = asc2_2412[chr][t];
	else return;
        for(t1 = 0; t1 < 8; t1++) {
            if(temp & 0x80) OLED_DrawPoint(x, y, mode);
            else OLED_DrawPoint(x, y, !mode);
            temp <<= 1;
            y++;
            if((y-y0) == size) {
		y = y0;
		x++;
		break;
            }
	}  	 
    }          
}
